@@ -1,3 +1,8 @@
+2012-01-06  Joel Brobecker  <brobecker@adacore.com>
+
+	* server.c (gdbserver_version): Update copyright year.
+	* gdbreplay.c (gdbreplay_version): Likewise.
+
 2011-12-13  Yao Qi  <yao@codesourcery.com>
 
 	* tracepoint.c (trace_buffer_alloc): Replace magic numbers with
