@@ -1,3 +1,7 @@
+2012-01-06  Joel Brobecker  <brobecker@adacore.com>
+
+	* top.c (print_gdb_version): Update copyright year.
+
 2012-01-04  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	Revert:
